tests/compile_pass/public_headers/core_describe.cpp
#include <pb/core/describe.hpp>

int pb_public_header_core_describe() { return 0; }
